extremely minor box-shadow tweak for text input

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,8 @@ form {
 }
 
 .searchbar:hover {
-  box-shadow: 0 2px 5px 0px lightgrey;
+  border-color: #ffffff;
+  box-shadow: 0 1px 4px 1px lightgrey;
 }
 
 .lens_container {
